# test-metadatahash

./: Cargo.toml  README.md
src/: extension.rs  main.rs
